--- a/lib/grocery_planner_web/live/recipes_live.html.heex
+++ b/lib/grocery_planner_web/live/recipes_live.html.heex
@@ -82,8 +82,7 @@
           phx-click="toggle_chains"
           class={if(@show_chains, do: "btn btn-secondary", else: "btn btn-ghost")}
         >
-          <.icon name="hero-arrow-path" class="w-5 h-5 inline mr-1" />
-          Chains
+          <.icon name="hero-arrow-path" class="w-5 h-5 inline mr-1" /> Chains
         </.button>
       </div>
     </div>
